_infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: vincentza/event-bus
        # resources:
          # limits:
          #   memory: "128Mi"
          #   cpu: "1000m"

---

apiVersion: v1
kind: Service
metadata:
  name: event-bus-serv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
  - name: event-bus
    protocol: TCP
    port: 8080
    targetPort: 8080
