_infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: vincentza/query

---

apiVersion: v1
kind: Service
metadata:
  name: query-serv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
  - name: query
    port: 8010
    targetPort: 8010
